Fix: index links breaking on mobile
Index links on mobile devices were breaking because of layout shifts
when the index drawer opened and closed. This was fixed by floating the
mobile drawer over the content, to ensure the layout is stable.

See here for more information:

https://github.com/grislyeye/vellum-doc/issues/18

--- a/src/vellum-doc.css
+++ b/src/vellum-doc.css
@@ -8,10 +8,19 @@
 
 #drawer {
   position: sticky;
+  left: 0;
   top: 0;
 
   --min-width: 0;
   --max-width: var(--index-width, var(--default-index-width));
+}
+
+@media (width < 700px) {
+  #drawer {
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
 }
 
 #toggle {
@@ -54,6 +63,7 @@
 #index {
   border-right: 1px solid;
   padding-bottom: 1em;
+  background-color: white;
 }
 
 .scrollable {
